--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
-    "version": 2,
-    "name": "music-album",
-    "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+
+    "builds": [ 
+    { 
+    "src": "./server.js",
+    
+    "use": " @vercel/node"
+     } 
     ],
+    
     "routes": [
-       { "src": "/(.*)", "dest": "/app.js" }
-    ]
- }
+    {"src":"/.*", "dest": "server.js"
+    }]}
