--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "node --experimental-modules server.js",
     "start-client": "cd client && npm start"
   },
-  "author": "Aniket",
+  "author": "Aniketmishra",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
