--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "frontjob",
+  "name": "client",
+  "proxy":"http://localhost:8080",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "build": "^0.1.4",
     "primeicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
