--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recruitify",
   "version": "1.0.0",
-  "description": "job portal project",
+  "description": "job-portal-project",
   "main": "server.js",
   "type": "module",
   "scripts": {
