--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recruitify",
+  "name": "backend",
   "version": "1.0.0",
   "description": "job-portal-project",
   "main": "server.js",
