--- a/package.json
+++ b/package.json
@@ -33,5 +33,14 @@
     "validator": "13.11.0",
     "xss": "1.0.14",
     "xss-clean": "0.1.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Aniket992/Job-Application-main.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Aniket992/Job-Application-main/issues"
+  },
+  "homepage": "https://github.com/Aniket992/Job-Application-main#readme"
 }
