--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run start-client\"",
     "server": "node --experimental-modules server.js",
-    "start-client": "cd client && npm start"
-  },
+    "start-client": "cd client && npm start",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"  },
   "author": "Aniketmishra",
   "license": "ISC",
   "dependencies": {
